src/objects/MUSW__Mapping_Service__c.object
<CustomObject>
    <description>Internal - API configuration for GIS Service</description>
    <fields>
        <fullName>MUSW__Service_API__c</fullName>
        <label>Service API</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Service_Key__c</fullName>
        <label>Service Key</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Service_Name__c</fullName>
        <label>Service Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Mapping Service</label>
    <listViews>
        <fullName>MUSW__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Mapping Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mapping Service</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>